# GitHub-Trending-CLI

./: -files  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
src/trending/: cli.py
src/trending/application/: service.py  validator.py
src/trending/domain/: models.py  sorter.py
src/trending/infrastructure/: github_client.py  parser.py
src/trending/utils/: config.py  errors.py  logger.py
tests/: test_models.py  test_service.py  test_validator.py
